[package]
name = "leveldb"
version = "0.8.6"
edition = "2021"
authors = [
    "Florian Gilcher <florian.gilcher@asquera.de>",
    "Zhang Xin <zx3306@126.com>"
]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

# documentation = "https://github.com/rim99/leveldb-rs-binding"
homepage = "https://github.com/rim99/leveldb-rs-binding"
repository = "https://github.com/rim99/leveldb-rs-binding"

autotests = false

[features]
default = ["leveldb-sys/snappy"]

[lib]
name = "leveldb"

[dependencies]
libc = "0.2.158"

[dependencies.leveldb-sys]
version = "2.0.0"

[dev-dependencies]
tempdir = "0.3.4"

[[test]]
name = "tests"
