[package]
name = "leveldb-rs-binding"
version = "0.8.7"
edition = "2021"
authors = [
    "Florian Gilcher <florian.gilcher@asquera.de>",
    "Zhang Xin <zxin3306@126.com>",
]

description = "An interface for leveldb"

license = "MIT"
readme = "README.md"

# documentation = "https://github.com/rim99/leveldb-rs-binding"
homepage = "https://github.com/rim99/leveldb-rs-binding"
repository = "https://github.com/rim99/leveldb-rs-binding"

build = "src/sys/build.rs"
links = "leveldb"
autotests = false

[features]
default = ["snappy"]
snappy = []

[lib]
name = "leveldb"

[dependencies]
libc = "0.2.*"
ffi-opaque = "2"

[build-dependencies]
cmake = "0.1"
num_cpus = "1.10"

[dev-dependencies]
tempdir = "0.3.4"

[[test]]
name = "tests"
